--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^0.27.2",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "sharp": "^0.30.7"
